samples/_failures_safe/1761336691_7e7477_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf3c2c2f.c: In function ‘bfs’:
./samples/SAFE/__tmp_bf3c2c2f.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_bf3c2c2f.c:157:9: error: expected declaration or statement at end of input
  157 |         for
      |         ^~~
./samples/SAFE/__tmp_bf3c2c2f.c:157:9: error: expected declaration or statement at end of input
